# Yavge

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  YAVGE.sln  YAVGE.vcxproj  conanfile.txt
Data/Shaders/: ChunkFragment.glsl  ChunkVertex.glsl  FramebufferFragment.glsl  GUIFragment.glsl  SceneFragment.glsl  SceneVertex.glsl  VoxelFragment.glsl  VoxelVertex.glsl  WaterFragment.glsl  WaterVertex.glsl
basic3/Data/Data/Shaders/: SceneFragment.glsl
scripts/: build.bat  build.sh  debug.sh  run.bat  run.sh
src/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  ChunkTerrainGen.cpp  ChunkTerrainGen.h  GUI.cpp  GUI.h  Game.cpp  Game.h  GraphicsOptions.h  Maths.cpp  Maths.h  Mesh.cpp  Mesh.h  Utility.cpp  Utility.h  Voxels.cpp  Voxels.h  main.cpp
src/Chunks/: Chunk.cpp  ChunkMesh.cpp  ChunkMesh.h  ChunkTerrainGen.cpp  ChunkTerrainGen.h  Voxels.cpp  Voxels.h
src/Graphics/: Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
